kube/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-frontend-service
  labels:
    app: web-frontend-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-frontend-service
  template:
    metadata:
      labels:
        app: web-frontend-service
    spec:
      containers:
        - image: s6individualproject/web-frontend-service
          imagePullPolicy: IfNotPresent
          name: web-frontend-service
          ports:
            - containerPort: 80
